go-cs v0.7						    Jun 30, 2017

  * Change: Refactor some functions.
  * Feature: add '-cmd, -cname, -dd, -du, -e, -mx, -nc, -nmap, -ns,
    -ping, -soa, -top, -tr, -tri, -u, -uname, -vm' options.

go-cs v0.6						    Oct 10, 2016

  * Bugfix: new '-t' option to make sudo(8) happy.
  * Change: rename '-t' to '-to'.

go-cs v0.5						    May 11, 2015

  * Bugfix: clean checkArgs() function.
  * Bugfix: fix '-d' when downloading same file from multiple servers.
    Now it creates subdirectories named after remote hosts.

go-cs v0.4						    Apr 23, 2015

  * Change: '-c', '-d', '-f' now accept arguments.
  * Feature: update and expand man page.

go-cs v0.3						    Dec 30, 2014

  * Change: rename '-v' to '-V'.
  * Feature: add '-v' option to display verbose mode.
  * Feature: add '-1' option to display one line mode.  It is especially
    helpful for sorting output later.

go-cs v0.2						   Sept 29, 2014

  * Bugfix: fix bug in error routine.
  * Bugfix: clean run() function.
  * Bugfix: fix bug with login option.
  * Change: rename cs.go -> cs/cs.go.
  * Feature: add godoc comments.
  * Feature: automatically add host key to known_hosts file.
  * Feature: add '-v' option to display version.
  * Security: securely call ssh(1) by hardcoding its path.

go-cs v0.1 					    	    Sept 8, 2014

  * The first public version.