@@ -6,11 +6,11 @@
 ## go-cs 
 
 cs is a program for concurrently executing local or remote commands on
-multiple hosts.  It is using OpenSSH for running remote commands.  The
-main purpose of the program is to help automate and manage large network
-of hosts.  So in essence this tool is very similar to Ansible, Chef or
-Puppet, but much more simpler and faster in execution.  Speed and
-simplicity are its main goals. 
+multiple hosts.  It is using OpenSSH for running remote commands.  Its
+main purpose is to help automate and manage large network of hosts.  So
+in essence this tool is very similar to Ansible, Chef or Puppet, but
+much more simpler and faster in execution.  Speed and simplicity are its
+main goals.
 
 ## Install
 
@@ -24,15 +24,15 @@ $ go get github.com/akosela/go-cs/cs
 #### Linux (rpm)
 
 ```
-$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.7/go-cs-0.7-1.x86_64.rpm
-# rpm -ivh go-cs-0.7-1.x86_64.rpm
+$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.8/go-cs-0.8-1.x86_64.rpm
+# rpm -ivh go-cs-0.8-1.x86_64.rpm
 ```
 
 #### Linux
 
 ```
-$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.7/go-cs-0.7.linux.tar.gz
-$ tar xvf go-cs-0.7.linux.tar.gz
+$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.8/go-cs-0.8.linux.tar.gz
+$ tar xvf go-cs-0.8.linux.tar.gz
 $ cd go-cs
 $ gzip cs.1
 # cp cs /usr/bin ; cp cs.1.gz /usr/share/man/man1
@@ -71,8 +71,8 @@ Port
 #### MacOS
 
 ```
-$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.7/go-cs-0.7.darwin.tar.gz
-$ tar xvf go-cs-0.7.darwin.tar.gz
+$ curl -OL https://github.com/akosela/go-cs/releases/download/v0.8/go-cs-0.8.darwin.tar.gz
+$ tar xvf go-cs-0.8.darwin.tar.gz
 $ cd go-cs
 $ gzip cs.1
 # cp cs /opt/local/bin ; cp cs.1.gz /opt/local/share/man/man1
@@ -84,43 +84,45 @@ $ gzip cs.1
 CS(1)                      BSD General Commands Manual                   CS(1)
 
 NAME
-     cs -- concurrent ssh client
+     cs - concurrent ssh client
 
 SYNOPSIS
      cs [-eqrstuVv1] [-c file] [-cmd] [-cname] [-d file] [-dd] [-du path]
-     [-f script.sh] [-h hosts_file] [-i identity_file] [-l login_name]
-     [-mx] [-nc] [-nmap] [-ns] [-o output_file] [-P port] [-p path] [-ping]
-     [-soa] [-to timeout] [-top] [-tr] [-tri] [-uname] [-vm] [command]
-     [[user@]host] ...
+     [-f script.sh] [-h hosts_file] [-i identity_file] [-ip]
+     [-l login_name] [-mx] [-nc] [-nmap] [-ns] [-o output_file] [-P port]
+     [-p path] [-ping] [-soa] [-to timeout] [-top] [-tr] [-tri] [-uname]
+     [-vm] [command] [[user@]host] ...
 
 DESCRIPTION
      cs is a program for concurrently executing local or remote commands on
-     multiple hosts.  It is using OpenSSH for running remote commands.
+     multiple hosts.  It is using OpenSSH for running remote commands.  Its
+     main purpose is to help automate and manage large network of hosts.
 
      The options are as follows:
 
      -c file
              Copy file to the remote machine.
 
-     -cmd    Runs an arbitrary local command concurrently on multiple hosts.
+     -cmd    Run an arbitrary local command concurrently on multiple hosts.
 
-     -cname  Runs a local DNS query of type CNAME.
+     -cname  Run a local DNS query of type CNAME.
 
      -d file
              Download file from the remote machine.  It will be saved in a
              directory named after the remote host only when you download from
              multiple servers.
 
-     -dd     Prints basic hardware specs for remote server (sudo(8) required).
+     -dd     Prints basic hardware information for a specific host (sudo(8)
+             and dmidecode(8) required).
 
      -du path
-     	     Prints the list of largest files for specified path (sudo(8) 
+     	     Prints the list of largest files in a specific directory (sudo(8) 
 	     required, units in M).
 
      -e      Prints hosts with errors only.
 
      -f script.sh
-             Runs a local shell script on the remote host.
+             Run a local shell script on the remote host.
 
      -h hosts_file
              Reads hostnames from the given hosts_file.  Lines in the
@@ -131,17 +133,19 @@ DESCRIPTION
              Selects a file from which the identity (private key) for public
              key authentication is read.  The default is ~/.ssh/id_rsa.
 
+     -ip     Lists network interfaces.
+
      -l login_name
              Specifies the user to log in as on the remote machine.  This also
              may be specified on a per-host basis on the command line.
 
-     -mx     Runs a local DNS query of type MX.
+     -mx     Run a local DNS query of type MX.
 
-     -nc     Tests specified port with netcat(1).  Default is 22/tcp.
+     -nc     Tests specified port with nc(1).  Default is 22/tcp.
 
      -nmap   Scans host with nmap(1).
 
-     -ns     Runs a local DNS query of type NS.
+     -ns     Run a local DNS query of type NS.
 
      -o output_file
              Saves standard output and standard error to a file.
@@ -153,7 +157,7 @@ DESCRIPTION
              Specifies remote or local path for files in a remote copy or
              download mode.
 
-     -ping   sends ICMP ECHO_REQUEST to specified host.
+     -ping   Sends ICMP ECHO_REQUEST to network hosts.
 
      -q      Quiet mode.  Supresses verbose standard output from remote
              machines.  This mode reports success or failure only.
@@ -163,7 +167,7 @@ DESCRIPTION
 
      -s      Sort output.
 
-     -soa    Runs a local DNS query of type SOA.
+     -soa    Run a local DNS query of type SOA.
 
      -t      Force pseudo-tty allocation.	
 
@@ -171,15 +175,15 @@ DESCRIPTION
              Specifies the timeout (in seconds) used when connecting to the
              SSH server.  The default value is 4 seconds.
 
-     -top    Runs remote top(1) in batch mode on specified host.
+     -top    Run remote top(1) in batch mode on a specific host.
 
-     -tr     Runs local traceroute(8).
+     -tr     Run local traceroute(8).
 
-     -tri    Runs local traceroute(8) using ICMP (sudo(8) required).
+     -tri    Run local traceroute(8) using ICMP (local sudo(8) required).
 
      -uname  Prints remote system information including OS version.
 
-     -u      Runs remote uptime(1) on specified host.
+     -u      Run remote uptime(1) on a specific host.
 
      -V      Displays the version number and exit.
 
@@ -188,7 +192,7 @@ DESCRIPTION
              authentication, and configuration problems.  Multiple -v options
              increase the verbosity.  The maximum is 3.
 
-     -vm     Runs remote vmstat(8) on specified host.
+     -vm     Run remote vmstat(8) on a specific host.
 
      -1      One line mode, useful for sorting output later.
 
@@ -209,26 +213,26 @@ EXAMPLES
 
            $ cs -h hosts_file uptime
 
-     Run a shell script on multiple hosts:
+     Run a local shell script on multiple hosts:
 
            $ cs -f script.sh foo{1..100}
 
-     Run a shell script with sudo(8) on multiple hosts:
+     Run a local shell script with sudo(8) on multiple hosts:
 
            $ cs -t -f script.sh foo{1..100}
 
-     Copy file to multiple hosts using specified remote path:
+     Copy file to multiple hosts using a specific remote path:
 
            $ cs -c file -h hosts_file -p /foo/bar
 
-     Download file from host foo:~ to a current working directory:
+     Download file from host foo:~ to the current working directory:
 
            $ cs -d file foo
 
      Download recursively files from /foo/bar from multiple hosts to a speci-
-     fied local path /tmp with subdirectories named after remote hosts:
+     fic local path /tmp with subdirectories named after remote hosts:
 
-           $ cs -r -d /foo/bar/\* -h hosts_file -p /tmp
+           $ cs -r -d '/foo/bar/*' -h hosts_file -p /tmp
 
      Run a command on multiple hosts and sort the output:
 
@@ -238,13 +242,9 @@ EXAMPLES
 
            $ cs -ping foo{1..100}
 
-     Run an arbitrary local command on multiple hosts.
+     Show name and size of all files matching the glob pattern:
 
-           $ cs -cmd 'ping -c1' foo{1..100}
-
-     Run remote uptime(1) on multiple hosts specified in a hosts_file:
-
-           $ cs -u -h hosts_file
+           $ cs -du '/var/log/mes*' foo{1..100}
 
 SEE ALSO
      scp(1), ssh(1), ssh_config(5), sudo(8)
@@ -252,5 +252,5 @@ SEE ALSO
 AUTHORS
      Andy Kosela <akosela@andykosela.com>
 
-BSD                              June 30, 2017                             BSD  
+BSD                              July 10, 2017                             BSD  
 ```
